[Fix] added kaggle icon and fixed icons alignement

--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,17 @@ header .navbar.active {
   margin-right: 60px;
 }
 
+.envelope .social-icon {
+  position: relative;
+  top: 5px; /* tweak this to move envelope icon down or up */
+}
+
+.kaggle .social-icon {
+  transform: scale(0.8);
+  position: relative;
+  top: -6px;  /* moves icon up by 3px */
+}
+
 #header .profile .social-links a {
   font-size: 18px;
   display: inline-block;
